fix spacing for continue link, bulleted text

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -123,6 +123,7 @@
                 padding-top: $spacing-unit / 2;
                 font-family: $logo-font-family;
                 text-transform: uppercase;
+                letter-spacing: 1.25px;
                 font-weight: 300;
                 font-size: 16px;
                 a {
